@@ -136,8 +136,7 @@ extern "C" {
  * supports the requested access.
  */
 
-typedef struct _TCB _TCB; /* Forward reference */
-EXTERN int net_checksd(FAR _TCB *tcb, int fd, int oflags);
+EXTERN int net_checksd(int fd, int oflags);
 
 /* net_sockets.c *************************************************************/
 /* There interfaces are called only from OS scheduling and iniialization logic
