@@ -63,3 +63,5 @@
 
 6.6 2011-xx-xx Gregory Nutt <spudmonkey@racsa.co.cr>
 
+	* Make.defs, namedapp/namedapp.c: Several structural changes made to get a
+	  clean compile under the ez80 ZDS-II toolchain (no design changes).
